# hexlet_django_blog

./: Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py
hexlet_django_blog/article/: admin.py  forms.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: article.html  article_form.html  create.html  index.html  update.html
hexlet_django_blog/templates/: 404.html  base.html
